# rst2typst

./: .age.toml  .env.example  .gitignore  .readthedocs.yaml  CHANGES.rst  README.rst  Taskfile.yaml  aqua.yaml  lefthook.yaml  pyproject.toml
.github/: release-body.md
.github/workflows/: benchmark.yaml  ci.yaml  deploy-doc.yml  release.yaml
demo/: .gitignore  Taskfile.yaml  index.rst  template.txt
docs/: .gitignore  api.rst  cli.rst  conf.py  contributing.rst  getting-started.rst  index.rst  roadmap.rst  spec.rst
docs/_examples/: index.rst.txt  index.typ.txt
docs/spec/: admonition.rst  math.rst
docs/spec/admonition/: danger.typ.txt  generic.rst.txt  generic.typ.txt
docs/spec/admonitions/: danger.rst.txt  danger.typ.txt  generic.typ.txt  index.rst
docs/spec/blockquote/: index.rst  simple.rst.txt  simple.typ.txt
docs/spec/bullet-lists/: index.rst  nested.rst.txt  nested.typ.txt  simple.rst.txt  simple.typ.txt
docs/spec/code/: code-block-php.rst.txt  code-block-php.typ.txt  code-python.rst.txt  doctest.rst.txt  doctest.typ.txt  index.rst
docs/spec/comments/: index.rst  simple.rst.txt
docs/spec/contents/: custom-title.rst.txt  custom-title.typ.txt  index.rst  simple.rst.txt  simple.typ.txt
docs/spec/definition-lists/: index.rst  simple.rst.txt  simple.typ.txt
docs/spec/docbook-elements/: index.rst  simple.rst.txt  simple.typ.txt
docs/spec/docinfo/: docinfo.typ.txt  index.rst  simple.rst.txt  simple.typ.txt
docs/spec/enumerated-lists/: auto-numbered.rst.txt  index.rst  nested.rst.txt  nested.typ.txt  simple.rst.txt  simple.typ.txt
docs/spec/field-lists/: index.rst  simple.rst.txt  simple.typ.txt
docs/spec/footnoetes/: auto-numbered-multiple.rst.txt  auto-numbered-multiple.typ.txt  auto-numbered.rst.txt  auto-numbered.typ.txt  index.rst  numbered.rst.txt  numbered.typ.txt  refer-same-footnote.rst.txt  refer-same-footnote.typ.txt
docs/spec/hyperlink/: external.rst.txt  index.rst
docs/spec/hyperlinks/: anonymous.rst.txt  anonymous.typ.txt  index.rst  indirect.rst.txt  indirect.typ.txt  internal.rst.txt  internal.typ.txt
docs/spec/images/: figure.rst.txt  figure.typ.txt  image.rst.txt  image.typ.txt  index.rst  linked-figure.rst.txt  linked-figure.typ.txt
docs/spec/inline-markups/: emphasis.rst.txt  emphasis.typ.txt  index.rst  language-roles.rst.txt  language-roles.typ.txt  literals.rst.txt  literals.typ.txt  strong-emphasis.rst.txt  strong-emphasis.typ.txt  title.rst.txt  title.typ.txt
docs/spec/line-blocks/: index.rst  simple-line-block.typ.txt
docs/spec/math/: index.rst  (+3 more)
e2e/: conftest.py  test_e2e.py  test_writer.py
e2e/cases-cli/: admonitions.typ  blockquote.typ  code.rst  code.typ  docinfo.rst  docinfo.typ  figure.rst  figure.typ  headings.typ  hyperlink.typ  inline-elements.rst  inline-elements.typ  list-elements.rst  list-elements.typ  raw.rst  raw.typ  tables.rst  tables.typ
e2e/fixtures/: no-overlap-in-field-list.rst
e2e/output/: admonitions.rst  admonitions.typ  math.rst  math.typ
src/rst2typst/: admonition.typ  cli.py  frontend.py  nodes.py  package.py  pdf.py  template.txt  transforms.py  writer.py
tests/: conftest.py  test_composite.py  test_package.py  test_pdf.py  test_spec.py  test_transforms.py
tests/cases-composite/: .gitignore
(+47 files in other folders)
