[project]
name = "rst2typst"
version = "0.0.0"
description = "Converter from docutils AST to Typst source"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
rst2typst = "rst2typst.cli:main"

[dependency-groups]
dev = [
    "doc8>=2.0.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
    { include-group = "test" },
]
test = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
