[project]
name = "rst2typst"
version = "0.0.0"
description = "Converter from docutils AST to Typst source"
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "atsphinx-footnotes>=0.3.2",
]

[project.scripts]
rst2typst = "rst2typst.cli:main"

[dependency-groups]
dev = [
    "doc8>=2.0.0",
    "ruff>=0.14.14",
    "sphinx-autobuild>=2024.10.3",
    "ty>=0.0.14",
    { include-group = "docs" },
    { include-group = "test" },
]
docs = [
    "shibuya>=2026.1.9",
    "sphinx>=8.1.3",
    "sphinx-design>=0.6.1",
    "sphinxext-opengraph>=0.13.0",
]
test = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.doc8]
max-line-length = 119
