[project]
name = "rst2typst"
version = "0.1.0"
description = "Converter from docutils AST to Typst source"
readme = "README.rst"
requires-python = ">=3.10"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: reStructuredText",
    "Topic :: Utilities",
]
dependencies = [
    "atsphinx-footnotes>=0.3.2",
]

[project.scripts]
rst2typst = "rst2typst.cli.rst2typst:main"
rst2typstpdf = "rst2typst.cli.rst2typstpdf:main"

[project.optional-dependencies]
pdf = [
    "typst>=0.14.8",
]

[project.urls]
homepage = "https://rst2typst.attakei.dev/"
source = "https://github.com/atsphinx/rst2typst"
documentation = "https://rst2typst.attakei.dev/"
issues = "https://github.com/atsphinx/rst2typst/issues"
funding = "https://github.com/sponsors/attakei"

[dependency-groups]
dev = [
    "doc8>=2.0.0",
    "ruff>=0.14.14",
    "sphinx-autobuild>=2024.10.3",
    "ty>=0.0.14",
    { include-group = "docs" },
    { include-group = "test" },
]
docs = [
    "shibuya>=2026.1.9",
    "sphinx>=8.1.3",
    "sphinx-design>=0.6.1",
    "sphinxext-opengraph>=0.13.0",
]
test = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.doc8]
max-line-length = 119
